--- a/index.html
+++ b/index.html
@@ -1,12 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Landing Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>DEAD CODE</title>
+
+  <!-- Font Awesome for the email icon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: 'Arial', sans-serif;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .container {
+      text-align: center;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    h1 {
+      font-size: 5rem;
+      margin-bottom: 2rem;
+    }
+
+    .contact-box {
+      display: inline-flex;
+      align-items: center;
+      background-color: #111;
+      padding: 1rem 2rem;
+      border: 1px solid #444;
+      border-radius: 10px;
+      font-size: 1.2rem;
+    }
+
+    .contact-box i {
+      margin-right: 0.8rem;
+      font-size: 1.5rem;
+    }
+
+    .contact-box:hover {
+      border-color: #fff;
+    }
+
+    footer {
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #777;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 3rem;
+      }
+
+      .contact-box {
+        flex-direction: column;
+        gap: 0.5rem;
+        padding: 1rem;
+      }
+
+      .contact-box i {
+        margin: 0;
+      }
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple landing page.</p>
+
+  <div class="container">
+    <h1>DEAD CODE</h1>
+    <div class="contact-box">
+      <i class="fas fa-envelope"></i>
+      <span>contact@deadcode.no</span>
+    </div>
+  </div>
+
+<footer>
+  <div>This code isn't alive yet. (site under construction)</div>
+  <div style="margin-top: 0.5rem;">© 2025 DEAD CODE. All rights reserved.</div>
+</footer>
+
 </body>
 </html>
