--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DEAD CODE</title>
 
-  <!-- Font Awesome for the email icon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" />
 
   <style>
     * {
@@ -19,50 +18,141 @@
       background-color: #000;
       color: #fff;
       font-family: 'Arial', sans-serif;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
     }
 
-    .container {
-      text-align: center;
-      flex-grow: 1;
+    .main-content {
+      flex: 1;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
+      padding: 2rem 1rem;
+      gap: 2rem;
+      text-align: center;
     }
 
     h1 {
       font-size: 5rem;
-      margin-bottom: 2rem;
     }
 
-    .contact-box {
-      display: inline-flex;
-      align-items: center;
+    .contact-box,
+    .contact-link {
       background-color: #111;
       padding: 1rem 2rem;
       border: 1px solid #444;
       border-radius: 10px;
       font-size: 1.2rem;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.4rem;
+      width: 320px;
+      cursor: default;
+      color: #fff;
+      transition: border-color 0.3s ease, color 0.3s ease;
+      text-decoration: none;
+      justify-content: flex-start;
     }
 
-    .contact-box i {
-      margin-right: 0.8rem;
-      font-size: 1.5rem;
-    }
-
-    .contact-box:hover {
+    .contact-box:hover,
+    .contact-link:hover {
       border-color: #fff;
+      color: #fff;
+    }
+
+    .contact-link:hover {
+      color: #1DA1F2;
+      border-color: #1DA1F2;
+    }
+
+    .contact-box i,
+    .contact-link i {
+      font-size: 1.5rem;
+      width: 30px;
+      text-align: center;
+      flex-shrink: 0;
+    }
+
+    .contact-text {
+      flex-grow: 1;
+      text-align: center;
+    }
+
+    .signup-section {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.8rem;
+    }
+
+    .signup-prompt {
+      font-size: 1.2rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 1rem;
+      background-color: #111;
+      padding: 1rem 3rem;
+      border: 1px solid #444;
+      border-radius: 10px;
+      font-size: 1.2rem;
+      max-width: 600px;
+      width: 100%;
+    }
+
+    form input[type="email"] {
+      flex-grow: 1;
+      min-width: 0;
+      background-color: transparent;
+      border: 1px solid #444;
+      border-radius: 6px;
+      color: #fff;
+      padding: 0.6rem 1rem;
+      font-size: 1rem;
+      outline-offset: 2px;
+      transition: border-color 0.3s ease;
+    }
+
+    form input[type="email"]::placeholder {
+      color: #777;
+    }
+
+    form input[type="email"]:focus {
+      border-color: #fff;
+    }
+
+    form input[type="submit"] {
+      background-color: transparent;
+      border: 1px solid #444;
+      border-radius: 6px;
+      color: #fff;
+      padding: 0.6rem 2rem;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: border-color 0.3s ease, color 0.3s ease;
+      width: auto;
+      min-width: 0;
+      text-transform: capitalize;
+      text-align: center;
+    }
+
+    form input[type="submit"]:hover {
+      border-color: #fff;
+      color: #fff;
+      background-color: #222;
     }
 
     footer {
       padding: 1rem;
       font-size: 0.9rem;
       color: #777;
+      text-align: center;
     }
 
     @media (max-width: 600px) {
@@ -70,32 +160,49 @@
         font-size: 3rem;
       }
 
-      .contact-box {
+      .contact-box,
+      .contact-link {
+        width: 280px;
+      }
+
+      form {
         flex-direction: column;
-        gap: 0.5rem;
+        max-width: 300px;
         padding: 1rem;
       }
 
-      .contact-box i {
-        margin: 0;
+      form input[type="submit"] {
+        width: 100%;
+        padding-left: 1rem;
+        padding-right: 1rem;
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
+  <div class="main-content">
     <h1>DEAD CODE</h1>
+
     <div class="contact-box">
       <i class="fas fa-envelope"></i>
-      <span>contact@deadcode.no</span>
+      <span class="contact-text">contact@deadcode.no</span>
+    </div>
+
+    <div class="signup-section">
+      <div class="signup-prompt">Sign up to be updated about our game</div>
+
+      <form action="https://buttondown.email/api/emails/embed-subscribe/deadcode" method="post">
+        <input type="email" name="email" placeholder="Your email address" required />
+        <input type="submit" value="Sign Up" />
+      </form>
     </div>
   </div>
 
-<footer>
-  <div>This code isn't alive yet. (site under construction)</div>
-  <div style="margin-top: 0.5rem;">© 2025 DEAD CODE. All rights reserved.</div>
-</footer>
+  <footer>
+    <div>This code isn't alive yet. (site under construction)</div>
+    <div style="margin-top: 0.5rem;">© 2025 DEAD CODE. All rights reserved.</div>
+  </footer>
 
 </body>
 </html>
